--- a/c#brage/c#brage.ini
+++ b/c#brage/c#brage.ini
@@ -33,6 +33,6 @@ Download = https://github.com/Gitjas/Brages_Redemption
 # Dynamic Install Order Category
 Type = NPC
 
-Before = bg1npc, c#brandock, c#grey, c#husam
+Before = bg1npc, c#brandock, c#grey, c#husam, EET_end
 
 After = bgqe, transitions
