splitted crossmod and added LABELs
- Crossmod was splitted into own component.
- Added globally unique LABELs to support Project Infinity.

--- a/c#brage/c#brage.ini
+++ b/c#brage/c#brage.ini
@@ -30,9 +30,12 @@ Forum = https://www.gibberlings3.net/forums/topic/30967-brages-redemption-brage-
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/Gitjas/Brages_Redemption
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
 # Dynamic Install Order Category
 Type = NPC
 
 Before = bg1npc, c#brandock, c#grey, c#husam, EET_end
 
-After = bgqe, transitions
+After = bgqe, c#endlessbg1, transitions
