--- a/c#brage/c#brage.ini
+++ b/c#brage/c#brage.ini
@@ -8,7 +8,7 @@
 [Metadata]
 
 # Full name of the mod, without version number
-Name = Brage's Redemption - Brage NPC for the whole Baldur's Gate Epic
+Name = Brage's Redemption - Brage NPC 
 
 # Author name or nick, don't use email address
 Author = jastey
