Install order syntax was nerfed
- in the .ini to lift restrictions for the main component. Make sure to install the crossmod component after all other relevant mods according to readme.

--- a/c#brage/c#brage.ini
+++ b/c#brage/c#brage.ini
@@ -38,4 +38,4 @@ Type = NPC
 
 Before = EET_end
 
-After = AC_QUEST, AjantisBG1, AjantisBG2, bg1re, bg1ub, bgqe, bst, c#sodboabri, c#endlessbg1, EET, FinchNPC, imoen4ever, ntotsc, thalan, transitions
+After = EET
